Make sure -verbose:gc, PrintGC, PrintGCDetails work consistently